# HackMD-Clone-CMDE-Project

./: IMMEDIATE-ADDITIONS.txt  README.md  README2.md  newbranch.txt  package-lock.json  package.json  stuff-to-add-to-future-readme.txt  things-to-note.txt  vite.config.js
archive/: expressServer.js  note.txt  socketIOServer.js
backend/: package-lock.json  package.json  schema.sql
backend/controllers/: authController.js
backend/routes/: auth.js
backend/server/: WHAT.md  package.json  server.js
backend/utility/: utilityFuncsBE.js
frontend/: TO-DO.md  vite.config.js
frontend/rust-markdown/pkg/: rust_markdown.d.ts  rust_markdown_bg.js
frontend/rust-markdown/src/: lib.rs
frontend/src/styles/: index.css
public/: _redirects  netlify.toml
public/guide_videos/: 1. Register & Sign-In.mkv  2. Creating new room and inviting another.mkv  4. Playing w Toolbar.mkv  6. Kicked in Real Time.mkv  7. Upload Image.mkv
public/site_videos/: 3. Notifs and Messaging.mkv  5. Playing w Toggle View.mkv  8. Download and Upload Image.mkv  9. Protected Routes.mkv
rust-markdown/: Cargo.toml
rust-markdown/pkg/: package.json  rust_markdown.js  rust_markdown_bg.wasm  rust_markdown_bg.wasm.d.ts
src/: package.json
src/components/: App.jsx  Editor.jsx  RemoteCursorOverlay.jsx  Server.js  collabProvider.js
src/components/backend/: dbConnection.js  expressServer.js  package.json  schema.sql  schemaSetup.js  server.js  socketIOServer.js  yjsServer.cjs  yjsServer.js
src/components/core-features/: CollaborativeBinding.jsx  MDParser.jsx  PrivateRoute.jsx  (+4 more)
src/styles/: index.css
(+48 files in other folders)
