[package]
name = "rust-markdown"
version = "0.1.0"
authors = ["Timan Zheng <timanzproper@gmail.com>"]
description = "Building a RUST-powered Markdown Parser w/ wasm-pack (to integrate into my CMDE Project)"
license = "Honestly, I have no idea"
repository = "https://github.com/timan-z/HackMD-Clone-CMDE-Project"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
comrak = "0.41"